# repro

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  promote.toml  rustqual.toml
.ctx/: GODMODE.session.json  GODMODE.trace.jsonl  conformance-spec.md  introspection-2026-05-30.md  repro-rustqual-baseline-v1.json  rustqual-baseline.json
.github/workflows/: ci.yml  release.yml
.kgx/data/: documents.json  graph.json
.kgx/wiki/: index.md  log.md
.kgx/wiki/entity/: analyzeargs.md  buildargs.md  builder-module.md  builder.md  buildparams.md  cli.md  commands.md  docker-build.md  manifestdescriptor.md  manifestinfo.md  normalize-path.md  oci-module.md  oci-parser.md  parse-manifest.md  parse-tarball.md  platformspec.md  podman-build.md  resolve-runtime.md  resolve-sde.md  rewrite-timestamp.md  source-date-epoch.md  verify-digest.md
.kgx/wiki/summary/: repro-codebase-overview.md
.kgx/wiki/topic/: oci-tarball-analysis.md  reproducibility-mechanism.md  runtime-abstraction.md
fuzz/: Cargo.toml
fuzz/corpus/fuzz_parse_manifest/: valid_index.json
fuzz/fuzz_targets/: fuzz_multi_manifest.rs  fuzz_parse_manifest.rs  fuzz_raw_tarball.rs  fuzz_snip_contents.rs  fuzz_verify_digest.rs
proptest-regressions/: oci.txt
src/: builder.rs  display.rs  kani_oci.rs  lib.rs  main.rs  oci.rs  testutil.rs
src/builder/: config.rs  kani_config.rs  mod.rs  resolver.rs  runner.rs  strategy.rs
tests/: integration.rs
tests/conformance/: integration_contract.rs  main.rs  resolver_contract.rs  runner_contract.rs  strategy_contract.rs
