[package]
name = "repro"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Reproducible container image builder and OCI tarball analyzer"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shell-words = "1"
which = "7"

[lib]
name = "repro"
path = "src/lib.rs"

[[bin]]
name = "repro"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
