[package]
name = "repro-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tar = "0.4"
flate2 = "1"
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"

[dependencies.repro]
path = ".."

[[bin]]
name = "fuzz_parse_manifest"
path = "fuzz_targets/fuzz_parse_manifest.rs"
doc = false
